# liq-scan

./: .gitignore  AGENT_STATE.md  AGENT_SUMMARY.md  README.md  pyproject.toml
docs/: README.md  coverage-gap.md  exceptions.md  logging.md  pit-policy.md  predicates.md  scan-persistence.md  scan-query.md  sweep.md  window-spec.md
schemas/: scan_result.json
src/liq/scan/: __init__.py  cli.py  engine.py  exceptions.py  persistence.py  predicates.py  query.py  sweep.py  template_loader.py  window.py
src/liq/scan/anchors/mean_reversion/: __init__.py  assertions.py  evaluator.py  models.py  regime.py
tests/: real_market_data.py  test_cli.py  test_cli_execute.py  test_cli_sweep.py  test_coverage_gaps.py  test_engine.py  test_execute_hardening.py  test_mean_reversion_anchor_assertions.py  test_mean_reversion_anchor_contract_imports.py  test_mean_reversion_anchor_import_lint.py  test_mean_reversion_anchors.py  test_mean_reversion_evaluator.py  test_mean_reversion_evaluator_helpers.py  test_mean_reversion_import_boundaries.py  test_mean_reversion_persistence.py  test_perf.py  test_predicates.py  test_query.py  test_schema_versioning.py  test_sweep.py  test_sweep_audit.py  test_sweep_branches.py  test_template_loader.py  test_tradable_filter.py  test_visibility.py  test_window.py
tests/contracts/: test_scan_engine_execute_xfail.py  test_scan_engine_sweep_xfail.py  test_scan_query_xfail.py
tests/perf/: test_sweep_memory.py
